--- a/vn/noticias/estilo.css
+++ b/vn/noticias/estilo.css
@@ -233,12 +233,19 @@ body {
 	}
 
 	.divProduto h1 {
-		font-size: 60px;
+		line-height: normal;
+		font-size: 2.4rem;
+		text-shadow: 4px 4px 0px rgb(245, 245, 245);
+	}
+	.divProduto h3 {
+		line-height: normal;
+		font-size: 0.8rem;
 		text-shadow: 4px 4px 0px rgb(245, 245, 245);
 	}
 	
 	.divProduto p, li, textarea, input {
-		font-size: 35px;
+		font-size: 1.2rem;
+		line-height: normal;
 		text-shadow: 4px 4px 0px rgb(245, 245, 245);
 		text-indent: 4vw;
 	}
