--- a/vn/noticias/estilo.css
+++ b/vn/noticias/estilo.css
@@ -207,6 +207,7 @@ body {
 }
 
 .divProduto p, li, textarea, input {
+	font-style: normal;
 	font-size: 30px;
 	color: rgb(70, 70, 70);
 	text-shadow: 2px 2px 0px rgb(245, 245, 245);
