--- a/vn/noticias/estilo.css
+++ b/vn/noticias/estilo.css
@@ -225,9 +225,7 @@ body {
 
 @media only screen and ( max-width: 700px) {
 
-	.Bloco3 {
-		line-height: 90px;
-	}	
+
 
 	.divProduto {
 		margin-left: 5%;
@@ -248,6 +246,12 @@ body {
 		font-size: 1.2rem;
 		line-height: normal;
 		text-shadow: 4px 4px 0px rgb(245, 245, 245);
+		text-indent: 4vw;
+	}	
+	.divProduto i {
+		color: black;
+		font-size: 1.2rem;
+		line-height: normal;
 		text-indent: 4vw;
 	}
 
