--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
     font-family: "Roboto";
     src: url("res/Roboto-Medium.ttf");
 }
-@keyframes hellyeah {
-    from {margin: 3%;}
-    to {margin-left: 5%;}
-  }
 body{
     margin: 0;
     padding: 0;
@@ -16,54 +12,50 @@ body{
 }
 a{
     text-decoration: none;
-    color: white;
+    color: black;
     margin: 10px;
     display: inline-block;
 }
 a:hover{
-    color: rgb(202, 138, 0);
+    color: white;
 }
-h1{
-    font-size: 40px;
-    background-color: rgb(0, 89, 161);
-    width: 215px;
-}
-.cabeca{
+header{
     margin: 0;
     padding: 0;
     position: sticky;
     top: 0 ;
-    background-color: rgb(0, 89, 161);
+    background-color: #da9fb3;
     width: 100%;
     height: 30px;
     margin: 0px;
-    word-spacing: 10px;
     text-align: center;
     transition: 0.5s;
-}
-.cabeca:hover{
     height: 50px;
+}
+main{
+    margin: 10px;
 }
 .title{
     float: left;
 }
-.contato{
+.sla-porra{
     float: right;
 }
-.txt{
-    margin-top: 3%;
-    margin-left: 1%;
-    text-align: left;
-    width: 600px;
-    float: left;
-    transition: 0.5s;
+.livros {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
 }
-.txt:hover{
-    margin-left: 3%
+.livros img {
+    width: 400px;
 }
-.menuimg{
-    flex-grow: 1;
-    display: flex;
-    margin-top: 5px;
-    float: right;
+@media only screen and (max-width: 1080px) {
+    body {
+      font-size: xx-large;
+    }
+    header {
+        height: 100px;
+    }
+    .livros {
+        grid-template-columns: auto auto;
+    }
 }
